# c2pa-node

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  c2pa-node-0.5.16.tgz  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.changeset/: angry-baboons-hunt.md  beige-phones-smoke.md  bright-hornets-check.md  brown-moles-change.md  c2pa-rs-update.md  chatty-beds-build.md  chilled-pianos-film.md  cool-moons-do.md  cyan-zoos-complain.md  dirty-gifts-punch.md  dirty-timers-shout.md  eight-adults-cover.md  famous-eagles-whisper.md  flat-ducks-thank.md  forty-frogs-push.md  gold-tables-buy.md  itchy-otters-dream.md  large-frogs-knock.md  nasty-pans-exist.md  nice-pears-join.md  nine-bears-protect.md  plenty-phones-tell.md  rare-suns-wish.md  seven-readers-laugh.md  shaggy-guests-rhyme.md  silent-dryers-taste.md  silver-dancers-strive.md  slimy-guests-swim.md  smooth-suns-add.md  strong-masks-pay.md  tasty-boxes-burn.md  tender-jeans-scream.md  twelve-rice-join.md  warm-geckos-drive.md  warm-phones-kick.md
.github/workflows/: build-binaries.yml  build-test.yml  closing-ticket.yml  labeling-ticket-done.yml  labeling-ticket-todo.yml  release-binaries.yml  release.yml  reopening-ticket.yml
api-docs/: README.md
api-docs/classes/: ManifestBuilder.md
api-docs/enums/: SigningAlgorithm.md  types.ManifestAssertionKind.md  types.Relationship.md
api-docs/interfaces/: BufferAsset.md  CreateIngredientProps.md  FileAsset.md  LocalSigner.md  RemoteSigner.md  ResolvedIngredient.md  ResolvedManifest.md  ResolvedManifestStore.md  ResolvedResource.md  ResolvedSignatureInfo.md  SignClaimBytesProps.md  SignInput.md  SignOptions.md  StorableIngredient.md  ThumbnailOptions.md  types.Actor.md  types.DataSource.md  types.HashedURI.md  types.Ingredient.md  types.Manifest.md  types.ManifestAssertion.md  types.ManifestStore.md  types.Metadata.md  types.ResourceRef.md  types.ResourceStore.md  types.ReviewRating.md  types.SignatureInfo.md  types.ValidationStatus.md
api-docs/modules/: types.md
docs/: README.md  modules.md  project-contributions.md  release-notes.md  usage.md
docs/classes/: ManifestBuilder.md
js-src/: bindings.ts  index.ts  types.d.ts
scripts/: dev-reload.js  download-test-certs.js  postinstall.js
src/: asset.rs  error.rs  ingredient.rs  lib.rs  runtime.rs  sign.rs
src/sign/: mod.rs  (+2 more)
tests/: hash.test.ts  ingredient.test.ts  read.test.ts  readme.test.ts  sign.test.ts
(+49 files in other folders)
