[package]
name = "c2pa-node"
version = "0.1.0"
description = "Node.js bindings for C2PA"
authors = ["Dave Kozma <dkozma@adobe.com>"]
license = "MIT"
edition = "2021"
exclude = ["generated/c2pa.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c2pa = { version = "0.23.2", features = [
	"fetch_remote_manifests",
	"file_io",
	"xmp_write",
] }
futures = "0.3"
thiserror = "1.0.40"
reqwest = { version = "0.11.18", features = [
	"blocking",
	"brotli",
	"deflate",
	"gzip",
] }
serde = "1.0.163"
serde_json = "1.0.96"

[dependencies.neon]
version = "1.0.0-alpha.4"
default-features = false
features = ["napi-6"]
