[package]
name = "c2pa-node"
version = "0.1.0"
description = "Node.js bindings for C2PA"
authors = ["Dave Kozma <dkozma@adobe.com>"]
license = "MIT"
edition = "2021"
exclude = ["generated/c2pa.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
c2pa = { version = "0.27.1", features = [
	"fetch_remote_manifests",
	"file_io",
	"xmp_write",
] }
futures = "0.3"
neon = { version = "1.0.0", default-features = false, features = [
	"futures",
	"napi-6",
] }
once_cell = "1.19.0"
reqwest = { version = "0.11.18", features = [
	"blocking",
	"brotli",
	"deflate",
	"gzip",
] }
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync"] }
